add pagination to commands; adapt to reworked util impl